tests-integration/tests/checking/snapshots/checking__generated__001_proxy_checking_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
Proxy :: forall (t0 :: Type) (k :: t0) (a :: k). Proxy a

Types
Proxy :: forall (t0 :: Type) (k :: t0). k -> Type
