tests-integration/tests/checking/snapshots/checking__generated__006_type_synonym_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms

Types
Tuple :: Type -> Type -> Type
AliasType :: Type
AliasTypeType :: Type -> Type
InferApply :: forall (t5 :: Type) (t10 :: Type). (t10 -> t5) -> t10 -> t5
InferTuple :: Type -> Type -> Type
CheckApply :: forall (x :: Type) (y :: Type). (x -> y) -> x -> y
CheckApplyElab :: forall (x :: Type) (y :: Type). (x -> y) -> x -> y

Synonyms
AliasType = Int
  Quantified = :0
  Kind = :0
  Type = :0

AliasTypeType = Array
  Quantified = :0
  Kind = :0
  Type = :0

InferApply = forall (t5 :: Type) (t10 :: Type) (f :: t10 -> t5) (a :: t10). f a
  Quantified = :2
  Kind = :0
  Type = :2

InferTuple = forall (x :: Type) (y :: Type). Tuple x y
  Quantified = :0
  Kind = :0
  Type = :2

CheckApply = forall (x :: Type) (y :: Type) (f :: x -> y) (a :: y). f a
  Quantified = :0
  Kind = :2
  Type = :2

CheckApplyElab = forall (x :: Type) (y :: Type) (f :: x -> y) (a :: y). f a
  Quantified = :0
  Kind = :2
  Type = :2
