tests-integration/tests/checking/snapshots/checking__generated__012_class_monad_state_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
return :: forall (m :: Type -> Type) (a :: Type). Monad m => a -> m a
get :: forall (s :: Type) (m :: Type -> Type). MonadState s m => m s
modify :: forall (s :: Type) (m :: Type -> Type). MonadState s m => (s -> s) -> m s

Types
Monad :: (Type -> Type) -> Constraint
MonadState :: Type -> (Type -> Type) -> Constraint
