tests-integration/tests/checking/snapshots/checking__generated__016_type_integer_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms

Types
Proxy :: forall (k :: Type). k -> Type
Positive :: Type
Negative :: Type
Underscore :: Type
LeadingZero :: Type
Hex :: Type

Synonyms
Positive = Proxy @Int 123
  Quantified = :0
  Kind = :0
  Type = :0

Negative = Proxy @Int (-1)
  Quantified = :0
  Kind = :0
  Type = :0

Underscore = Proxy @Int 123456
  Quantified = :0
  Kind = :0
  Type = :0

LeadingZero = Proxy @Int 123
  Quantified = :0
  Kind = :0
  Type = :0

Hex = Proxy @Int 16777215
  Quantified = :0
  Kind = :0
  Type = :0
