tests-integration/tests/checking/snapshots/checking__generated__020_recursive_synonym_expansion_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms

Types
F :: forall (t3 :: Type). t3
G :: forall (t3 :: Type). t3
H :: forall (t5 :: Type). t5
Valid :: Type

Synonyms
F = F
  Quantified = :0
  Kind = :0
  Type = :0

G = F
  Quantified = :0
  Kind = :0
  Type = :0

H = H
  Quantified = :0
  Kind = :0
  Type = :0

Valid = Int
  Quantified = :0
  Kind = :0
  Type = :0
