tests-integration/tests/checking/snapshots/checking__generated__021_type_operator_chain_polykinded_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms

Types
Add :: forall (k :: Type). k -> k -> k
+ :: forall (k :: Type). k -> k -> k
Chain :: forall (k :: Type). k -> k -> k -> k
ChainParen :: forall (k :: Type). k -> k -> k -> k

Synonyms
Add = forall (k :: Type) (a :: k) (b :: a). a
  Quantified = :0
  Kind = :1
  Type = :2

Chain = forall (k :: Type) (a :: k) (b :: a) (c :: b). a + b + c
  Quantified = :0
  Kind = :1
  Type = :3

ChainParen = forall (k :: Type) (a :: k) (b :: a) (c :: b). a + b + c
  Quantified = :0
  Kind = :1
  Type = :3
